--- a/Colab_filtering.ipynb
+++ b/Colab_filtering.ipynb
@@ -1,4 +1,4 @@
-{
+q{
  "cells": [
   {
    "cell_type": "markdown",
@@ -392,7 +392,7 @@
    "source": [
     "print(len(df))\n",
     "print(len(filter_df))\n",
-    "# only ~70k! now hopefully it runs lol\n",
+    "# only ~1.5M! now hopefully it runs lol\n",
     "filter_df"
    ]
   },
